2000-06-12  Gerd Moellmann  <gerd@gnu.org>

	* xfaces.c (Fdump_colors) [DEBUG_X_COLORS]: New function.
	(syms_of_xfaces): Defsubr Sdump_colors.
	(x_free_colors): Don't treat b&w specially on default visual.
	(x_free_dpy_colors): New function.
	(free_face_colors): Don't check visual class; it's done
	in x_free_colors.

	* xterm.c (x_frame_of_widget): New function.
	(x_alloc_nearest_color_for_widget): Use it.
	(x_copy_dpy_color): New function.
	(x_destroy_window): Free various colors.

2000-06-12  Kenichi Handa  <handa@etl.go.jp>

	* ccl.h (EMACS_CCL_H): Renamed from _CCL_H.

	* charset.h (EMACS_CHARSET_H): Renamed from _CHARSET_H.

	* coding.h (EMASC_CODING_H): Renamed from _CODING_H.

	* composite.h (EMACS_COMPOSITE_H): Renamed from _COMPOSITE_H.

	* fontset.h (EMACS_FONTSET_H): Renamed from _FONTSET_H.

2000-06-11  Dave Love  <fx@gnu.org>

	* systime.h (EMACS_SYSTIME_H): Renamed from _SYSTIME_H.

2000-06-11  Eli Zaretskii  <eliz@is.elta.co.il>

	* msdos.h: Don't use _MSDOS_H_ as a symbol, use MSDOS_H_ instead.

2000-06-11  Gerd Moellmann  <gerd@gnu.org>

	* xmenu.c (xmenu_show): Cast second parameter of lw_popup_menu
	to `XEvent *'.

2000-06-10  Kenichi Handa  <handa@etl.go.jp>

	* regex.c (MAKE_CHAR) [!emacs]: Dummy macro for non-Emacs env.
	(regex_compile): Fix the code for handling the case of single byte
	char and multibyte char being mixed in a range within [...].

	* fileio.c (Finsert_file_contents): Be sure to setup src_multibyte
	and dst_multibyte members of coding.

	* charset.c (update_charset_table): Update the table
	bytes_by_char_head.
	(init_charset_once): Initialize elements of bytes_by_char_head to
	1 except for leading codes for private charases.

	* charset.h (CHARSET_8_BIT_GRAPHIC): Define as 0x80.
	(UNIBYTE_STR_AS_MULTIBYTE_P): Fix for an invalid multibyte
	sequence.

2000-06-09  Ken Raeburn  <raeburn@gnu.org>

	* xterm.c (x_connection_closed): If dpyinfo is NULL, don't try to
	access the data it doesn't point to.
